kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Action_Step__c/Action_Step__c.object-meta.xml
<CustomObject>
    <description>Agentforce が組み立てた対応プランの個別ステップ</description>
    <label>対応ステップ</label>
    <nameField>
        <displayFormat>STEP-{0000}</displayFormat>
        <label>ステップ番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>対応ステップ</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>