kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Action_Step__c/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <label>アラート</label>
    <referenceTo>Substation_Alert__c</referenceTo>
    <relationshipLabel>対応ステップ</relationshipLabel>
    <relationshipName>Action_Steps</relationshipName>
    <type>MasterDetail</type>
</CustomField>