kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Action_Step__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>詳細</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>