kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Action_Step__c/fields/Meta_Info__c.field-meta.xml
<CustomField>
    <fullName>Meta_Info__c</fullName>
    <label>メタ情報</label>
    <length>255</length>
    <type>Text</type>
</CustomField>