kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Action_Step__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>順序</label>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>