kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Action_Step__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>待機</fullName><default>true</default><label>待機</label></value>
            <value><fullName>実行中</fullName><default>false</default><label>実行中</label></value>
            <value><fullName>完了</fullName><default>false</default><label>完了</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>