kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Action_Step__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>連携システム</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>SAP</fullName><default>false</default><label>SAP S/4HANA</label></value>
            <value><fullName>AWS</fullName><default>false</default><label>AWS</label></value>
            <value><fullName>M365</fullName><default>false</default><label>Microsoft 365</label></value>
            <value><fullName>Teams</fullName><default>false</default><label>Microsoft Teams</label></value>
            <value><fullName>DC</fullName><default>false</default><label>中央給電指令所</label></value>
            <value><fullName>Slack</fullName><default>false</default><label>Slack</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>