kensuke-sf-mockup-v0.7/tepco-vision-demo/force-app/main/default/objects/Action_Step__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>タイトル</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>